<resources>
    <string name="app_name">InstaPay</string>

    <string name="stripeTestPublishableKey">pk_test_B04KoH4BztCSTDWiC8XyXiBF</string>

    <string name="_0">0</string>
    <string name="_$">$</string>
    <string name="_x">" x "</string>

    <string name="actionSettings">Settings</string>
    <string name="actionLogout">Logout</string>
    <string name="actionPaymentMethods">Payment methods</string>

    <string name="alertPermissionRequest">This function requires permissions to access Camera.</string>
    <string name="alertBtnPositive">Grant</string>
    <string name="alertBtnNegative">Don\'t grant</string>

    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnExit">Exit</string>
    <string name="btnHome">Home</string>
    <string name="btnAdd">Add</string>
    <string name="btnNoThanks">No thanks</string>
    <string name="btnOkay">Okay</string>

    <string name="descHomeBackground">Home background</string>
    <string name="descCardClose">Card remove</string>
    <string name="descBarcodeBox">BarcodeBox</string>
    <string name="descFlashSwitch">Flash switch</string>
    <string name="descPaymentMethodLogo">Payment method logo</string>

    <string name="dialogProcessingPayment">Processing secure payment…</string>
    <string name="dialogFetchingCards">Fetching and decrypting cards…</string>
    <string name="dialogSavingCard">Encrypting and saving card…</string>
    <string name="dialogLoadingVendors">Loading vendors…</string>
    <string name="dialogLoadingOrders">Loading orders…</string>
    <string name="dialogDeletePaymentMethod">Deleting payment method…</string>
    <string name="dialogNoSamsung">This app works only on Samsung devices.</string>
    <string name="dialogVerifyingCredentials">Verifying credentials…</string>
    <string name="dialogRegistering">Creating user…</string>
    <string name="dialogNoCards">You have not saved any cards yet.
        Please add one to make shopping experience better and faster.</string>

    <string name="edEmail">Email</string>
    <string name="edPassword">Password</string>
    <string name="edFirstName">First name</string>
    <string name="edLastName">Last name</string>
    <string name="edUserName">Username</string>
    <string name="edPhoneNumber">Phone number</string>
    <string name="edPostalCode">Postal code</string>
    <string name="edHomeAddr">Home address</string>
    <string name="edConfirmPassword">Confirm password</string>

    <string name="errInvalidEmail">Invalid email address.</string>
    <string name="errRegisterFail">Registration failed. Try again.</string>
    <string name="errPasswordsMismatch">Passwords do not match.</string>
    <string name="errInvalidPassword">Invalid password. 8 chars, 1 alphabet, 1 digit, 1 special.</string>
    <string name="errEmptyField">Field cannot be empty.</string>
    <string name="errInvalidPhone">Invalid phone number.</string>
    <string name="errPreviewSize">Couldn\'t find any suitable preview size</string>
    <string name="errCamera2Support">Camera2API not supported</string>
    <string name="errRotation">"Display rotation is invalid: "</string>
    <string name="errNetworkError">Network error.</string>
    <string name="errBarcodeDErr">Couldn\'t start barcode detector. Try again.</string>
    <string name="errBarcodeErr">Could not detect barcode. Try again.</string>
    <string name="errProductDuplicate">" already there in list. Try to increase quantity."</string>
    <string name="errNoPaymentMethods">No payment methods found. Please add one.</string>
    <string name="errNoProductsInCart">Cannot checkout with empty cart.</string>
    <string name="errErrAddCard">Error adding card. Try again.</string>
    <string name="errCardName">Card name cannot be empty.</string>
    <string name="errCardNumber">Invalid card number.</string>
    <string name="errExpDate">Invalid exp date.</string>
    <string name="errCVC">Invalid cvc.</string>
    <string name="errPaymentFailed">Payment failed. Try again.</string>
    <string name="errDeletingCard">Error deleting card. Try again.</string>
    <string name="errCameraFailure">Camera failure. Try again.</string>

    <string name="keyAdapter">adapter</string>
    <string name="keyVendorName">vendorName</string>
    <string name="keyVendorID">vendorID</string>
    <string name="keyTotalAmount">totalAmount</string>
    <string name="keyProducts">products</string>
    <string name="keyEditMode">editMode</string>
    <string name="keyError">error</string>
    <string name="keyOrder">order</string>

    <string name="linkForgotPassword">Forgot password?</string>

    <string name="msgProductAdded">" added to cart."</string>
    <string name="msgCardAddSuccess">Card added successfully.</string>
    <string name="msgAccountCreated">Account created. Proceed to login.</string>
    <string name="msgNoVendors">No vendors registered yet. Come back later.</string>
    <string name="msgNoOrders">No orders found.</string>
    <string name="msgPaymentMethodDeleteSuccess">Payment method deleted successfully.</string>
    <string name="msgBackPressed">Press again to exit.</string>
    <string name="msgPaymentSuccess">Payment successful.</string>
    <string name="msgComingSoon">Coming soon</string>

    <string name="prefLoginStatus">LoginStatus</string>
    <string name="prefEmail">Email</string>
    <string name="prefUserId">UserID</string>

    <string name="subtitleHome">Buy fast, pay easy.</string>

    <string name="titleHome">Welcome to InstaPay</string>
    <string name="titleCreateAccount">Create account</string>
    <string name="titleLogin">Login now</string>
    <string name="titleVendors">Vendors</string>
    <string name="titleOrders">Order history</string>
    <string name="titleQuantity">Quantity</string>
    <string name="titlePaymentMethods">Payment methods</string>
    <string name="titleNoCards">No cards</string>
    <string name="titleReceipt">Receipt</string>
    <string name="titleShopMore">Shop more?</string>

    <string name="tvTotalAmount">Total amount:</string>

    <string name="txtQty">Qty:</string>
    <string name="txtPrice">Price: $</string>
    <string name="txtTotalAmount">Total amount: $</string>
    <string name="txtStars">****-****-****-</string>
    <string name="txtPayable">Payable: $</string>
    <string name="txtHST">13% HST: $</string>
    <string name="txtHSTReceipt">13% HST:</string>
    <string name="txtReceiptNumber">Receipt no:</string>
    <string name="txtVendorName">Vendor name:</string>
    <string name="txtVendorId">Vendor id:</string>
    <string name="txtUserEmail">User email:</string>
    <string name="txtUserId">User id:</string>
    <string name="txtTimeStamp">Time stamp:</string>
    <string name="txtAmountPaid">Amount paid: $</string>
    <string name="btnTryAgain">Try again</string>

</resources>
