<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/scrollView">
    
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="1"
        android:padding="6dp">

        <TableRow android:layout_margin="4dp">
            <TextView
                android:textSize="16sp"
                android:layout_margin="2dp"
                android:text="@string/txtReceiptNumber" />
            <TextView android:id="@+id/tvReceiptNumber"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
        </TableRow>

        <TableRow android:layout_margin="4dp">
            <TextView
                android:textSize="16sp"
                android:layout_margin="2dp"
                android:text="@string/txtVendorName" />
            <TextView android:id="@+id/tvVendorName"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
        </TableRow>

        <TableRow android:layout_margin="4dp">
            <TextView
                android:textSize="16sp"
                android:layout_margin="2dp"
                android:text="@string/txtVendorId" />
            <TextView android:id="@+id/tvVendorId"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
        </TableRow>

        <TableRow android:layout_margin="4dp">
            <TextView
                android:textSize="16sp"
                android:layout_margin="2dp"
                android:text="@string/txtUserEmail" />
            <TextView android:id="@+id/tvUserEmail"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
        </TableRow>

        <TableRow android:layout_margin="4dp">
            <TextView
                android:textSize="16sp"
                android:layout_margin="2dp"
                android:text="@string/txtUserId" />
            <TextView android:id="@+id/tvUserId"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
        </TableRow>

        <TableRow android:layout_margin="4dp">
            <TextView
                android:textSize="16sp"
                android:layout_margin="2dp"
                android:text="@string/txtTimeStamp" />
            <TextView android:id="@+id/tvTimeStamp"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
        </TableRow>

        <TableRow android:layout_margin="4dp">
            <TextView
                android:textSize="16sp"
                android:layout_margin="2dp"
                android:text="@string/txtAmountPaid" />
            <TextView android:id="@+id/tvTotalAmount"
                android:textSize="16sp"
                android:layout_margin="2dp"/>
        </TableRow>

    </TableLayout>

</ScrollView>