<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="matrians.instapaysam.ScanActivity">

    <FrameLayout
        android:id="@+id/cameraFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/transparent_white_percent_80"
        android:contentDescription="@string/descBarcodeBox"/>

    <FrameLayout
        android:id="@+id/rvFrag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/flash"
        android:layout_marginBottom="?attr/actionBarSize"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:layout_alignStart="@+id/flash">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/txtTotalAmount"/>
        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/_0"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:src="@drawable/ic_flash_off_black_24dp"
        android:contentDescription="@string/descFlashSwitch"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:orientation="vertical">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="?attr/actionBarSize"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_add_a_photo_white_48px"/>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.6"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:orientation="vertical">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabCheckout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="?attr/actionBarSize"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_check_white_48px"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>